--- a/src/app/feature/calendar/cards/shooting-star/shooting-star.component.css
+++ b/src/app/feature/calendar/cards/shooting-star/shooting-star.component.css
@@ -97,7 +97,7 @@
 }
 
 .shooting-star .shooting-star__star span::before {
-  content: "";
+  content: '';
   display: block;
   width: 2rem;
   height: 2rem;
