--- a/src/app/feature/calendar/cards/snowman/snowman.component.css
+++ b/src/app/feature/calendar/cards/snowman/snowman.component.css
@@ -16,7 +16,7 @@
   --snowman-nose: #f72585;
   --snowman-arm: #6d597a;
 
-  font-family: "Verdana", sans-serif;
+  font-family: 'Verdana', sans-serif;
   width: 10rem;
   height: 21rem;
   position: relative;
