--- a/src/app/feature/calendar/calendar-grid.component.css
+++ b/src/app/feature/calendar/calendar-grid.component.css
@@ -11,25 +11,25 @@
   transform: translate3d(0px, 0px, 0px);
 
   grid-template-areas:
-    "title  title  title"
-    "day5   day17  day15"
-    "day19  day12  day11"
-    "day24  day20  day1"
-    "day9   day16  day6"
-    "day22  day14  day4"
-    "day13  day10  day21"
-    "day2   day23  day3"
-    "day8   day7   day18";
+    'title  title  title'
+    'day5   day17  day15'
+    'day19  day12  day11'
+    'day24  day20  day1'
+    'day9   day16  day6'
+    'day22  day14  day4'
+    'day13  day10  day21'
+    'day2   day23  day3'
+    'day8   day7   day18';
 
   /* media query */
   @media only screen and (min-width: 900px) {
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-areas:
-        "title  title  title  day5   day17  day15 day19 day12"
-        "title  title  title  day11  day24  day24 space day20"
-        "title  title  title  day1   day24  day24 day9 day16"
-        "day6   day22  day14  day4   year   year  year day13"
-        "day10  day21  day2   day23  day3   day8  day7 day18";
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-areas:
+      'title  title  title  day5   day17  day15 day19 day12'
+      'title  title  title  day11  day24  day24 space day20'
+      'title  title  title  day1   day24  day24 day9 day16'
+      'day6   day22  day14  day4   year   year  year day13'
+      'day10  day21  day2   day23  day3   day8  day7 day18';
   }
 }
 
@@ -48,22 +48,11 @@
 .title h1 {
   font-size: 2.75rem;
   text-align: center;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.2);
   display: flex;
   flex-direction: row;
-}
-
-.title-christmas {
-  color: #e63946;
-  display: block;
-  transform: rotate(5deg);
-  margin-right: 1rem;
-}
-
-.title-calendar {
-  color: #413486;
-  display: block;
-  transform: rotate(-5deg);
+  background-image: var(--red-to-pink-to-purple-horizontal-gradient);
+  color: transparent;
+  -webkit-background-clip: text;
 }
 
 .card {
@@ -182,7 +171,7 @@ label:hover .door {
 
 .title-container p::before,
 .title-container a::before {
-  content: "";
+  content: '';
   display: block;
   border-radius: 0.75rem;
   background: repeating-linear-gradient(
@@ -359,102 +348,102 @@ label:hover .door {
 }
 
 @media only screen and (min-width: 576px) {
-.day-1 {
-  grid-area: day1;
-  z-index: 14;
-}
-.day-2 {
-  grid-area: day2;
-  z-index: 19;
-}
-.day-3 {
-  grid-area: day3;
-  z-index: 5;
-}
-.day-4 {
-  grid-area: day4;
-  z-index: 12;
-}
-.day-5 {
-  grid-area: day5;
-  z-index: 20;
-}
-.day-6 {
-  grid-area: day6;
-  z-index: 9;
-}
-.day-7 {
-  grid-area: day7;
-  z-index: 7;
-}
-.day-8 {
-  grid-area: day8;
-  z-index: 6;
-}
-.day-9 {
-  grid-area: day9;
-  z-index: 17;
-}
-.day-10 {
-  grid-area: day10;
-  z-index: 1;
-}
-.day-11 {
-  grid-area: day11;
-  z-index: 15;
-}
-.day-12 {
-  grid-area: day12;
-  z-index: 24;
-}
-.day-13 {
-  grid-area: day13;
-  z-index: 13;
-}
-.day-14 {
-  grid-area: day14;
-  z-index: 11;
-}
-.day-15 {
-  grid-area: day15;
-  z-index: 22;
-}
-.day-16 {
-  grid-area: day16;
-  z-index: 18;
-}
-.day-17 {
-  grid-area: day17;
-  z-index: 21;
-}
-.day-18 {
-  grid-area: day18;
-  z-index: 8;
-}
-.day-19 {
-  grid-area: day19;
-  z-index: 23;
-}
-.day-20 {
-  grid-area: day20;
-  z-index: 19;
-}
-.day-21 {
-  grid-area: day21;
-  z-index: 2;
-}
-.day-22 {
-  grid-area: day22;
-  z-index: 10;
-}
-.day-23 {
-  grid-area: day23;
-  z-index: 4;
-}
-.day-24 {
-  grid-area: day24;
-  z-index: 16;
-}
+  .day-1 {
+    grid-area: day1;
+    z-index: 14;
+  }
+  .day-2 {
+    grid-area: day2;
+    z-index: 19;
+  }
+  .day-3 {
+    grid-area: day3;
+    z-index: 5;
+  }
+  .day-4 {
+    grid-area: day4;
+    z-index: 12;
+  }
+  .day-5 {
+    grid-area: day5;
+    z-index: 20;
+  }
+  .day-6 {
+    grid-area: day6;
+    z-index: 9;
+  }
+  .day-7 {
+    grid-area: day7;
+    z-index: 7;
+  }
+  .day-8 {
+    grid-area: day8;
+    z-index: 6;
+  }
+  .day-9 {
+    grid-area: day9;
+    z-index: 17;
+  }
+  .day-10 {
+    grid-area: day10;
+    z-index: 1;
+  }
+  .day-11 {
+    grid-area: day11;
+    z-index: 15;
+  }
+  .day-12 {
+    grid-area: day12;
+    z-index: 24;
+  }
+  .day-13 {
+    grid-area: day13;
+    z-index: 13;
+  }
+  .day-14 {
+    grid-area: day14;
+    z-index: 11;
+  }
+  .day-15 {
+    grid-area: day15;
+    z-index: 22;
+  }
+  .day-16 {
+    grid-area: day16;
+    z-index: 18;
+  }
+  .day-17 {
+    grid-area: day17;
+    z-index: 21;
+  }
+  .day-18 {
+    grid-area: day18;
+    z-index: 8;
+  }
+  .day-19 {
+    grid-area: day19;
+    z-index: 23;
+  }
+  .day-20 {
+    grid-area: day20;
+    z-index: 19;
+  }
+  .day-21 {
+    grid-area: day21;
+    z-index: 2;
+  }
+  .day-22 {
+    grid-area: day22;
+    z-index: 10;
+  }
+  .day-23 {
+    grid-area: day23;
+    z-index: 4;
+  }
+  .day-24 {
+    grid-area: day24;
+    z-index: 16;
+  }
 }
 
 @media only screen and (max-width: 575px) {
@@ -504,7 +493,6 @@ label:hover .door {
   animation: pulse 2s infinite;
 }
 
-
 .space,
 .space a {
   display: flex;
@@ -524,25 +512,16 @@ label:hover .door {
 .year {
   grid-area: year;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   justify-content: center;
-  gap: 1rem;
+}
+
+.year h1 {
+  background-image: var(--red-to-pink-to-purple-horizontal-gradient);
+  color: transparent;
+  -webkit-background-clip: text;
+  margin: 0;
+  font-weight: 500;
   font-size: 5rem;
-}
-
-.year span {
-  display: block;
-}
-
-.year span:nth-child(odd) {
-  transform: rotate(5deg);
-  color: #e63946;
-}
-
-.year span:nth-child(even) {
-  color: #413486;
-  transform: rotate(-5deg);
 }
 
 @media only screen and (max-width: 900px) {
