--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -6,10 +6,7 @@
     priority="true"
     alt="Angular Wordmark Gradient"
   />
-  <h1>
-    <span class="title-christmas">Christmas</span>
-    <span class="title-calendar">Calendar</span>
-  </h1>
+  <h1>Christmas Calendar</h1>
 </div>
 
 @for (card of cards; track $index) {
@@ -69,8 +66,5 @@
 </div>
 
 <div class="year">
-  <span>2</span>
-  <span>0</span>
-  <span>2</span>
-  <span>3</span>
+  <h1>2023</h1>
 </div>
