--- a/src/app/feature/calendar/cards/candle/candle.component.css
+++ b/src/app/feature/calendar/cards/candle/candle.component.css
@@ -37,41 +37,29 @@
   z-index: 2;
   left: 1.5rem;
   bottom: 2rem;
-  background: linear-gradient(
-    to right,
-    var(--candle-light) 0,
-    var(--candle-dark) 100%
-  );
+  background: linear-gradient(to right, var(--candle-light) 0, var(--candle-dark) 100%);
 }
 
 .candle .candle__body::before {
   display: block;
-  content: "";
+  content: '';
   position: absolute;
   top: -1rem;
   width: 3rem;
   height: 2rem;
   border-radius: 50%;
-  background: radial-gradient(
-    circle at 50% 0,
-    var(--candle-light) 0,
-    var(--candle-top) 100%
-  );
+  background: radial-gradient(circle at 50% 0, var(--candle-light) 0, var(--candle-top) 100%);
 }
 
 .candle .candle__body::after {
   display: block;
-  content: "";
+  content: '';
   position: absolute;
   bottom: -1rem;
   width: 3rem;
   height: 2rem;
   border-radius: 50%;
-  background: linear-gradient(
-    to right,
-    var(--candle-light) 0,
-    var(--candle-dark) 100%
-  );
+  background: linear-gradient(to right, var(--candle-light) 0, var(--candle-dark) 100%);
 }
 
 .candle .candle__wax-1 {
@@ -101,7 +89,7 @@
 .candle .candle__wax-1::after,
 .candle .candle__wax-2::after,
 .candle .candle__wax-3::after {
-  content: "";
+  content: '';
   display: block;
   width: 1rem;
   height: 1rem;
