--- a/src/app/feature/calendar/cards/christmas-lights/christmas-lights.component.css
+++ b/src/app/feature/calendar/cards/christmas-lights/christmas-lights.component.css
@@ -40,7 +40,7 @@
 }
 
 .christmas-lights .chord::before {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: calc(var(--christmas-lights-size) * 3);
@@ -63,7 +63,7 @@
 }
 
 .christmas-lights .bulb::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: -10;
@@ -76,7 +76,7 @@
 }
 
 .christmas-lights .bulb::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 1;
