--- a/src/app/feature/calendar/cards/elf-hat/elf-hat.component.css
+++ b/src/app/feature/calendar/cards/elf-hat/elf-hat.component.css
@@ -38,7 +38,7 @@
 }
 
 .elf-hat .elf-hat__main::before {
-  content: "";
+  content: '';
   display: block;
   width: 12rem;
   height: 20rem;
@@ -47,7 +47,7 @@
 }
 
 .elf-hat .elf-hat__main::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 2;
@@ -80,7 +80,7 @@
 }
 
 .elf-hat .elf-hat__side::after {
-  content: "";
+  content: '';
   display: block;
   width: 9rem;
   height: 1rem;
@@ -100,7 +100,7 @@
 
 .elf-hat .elf-hat__side__left::before {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   width: 8rem;
   height: 8rem;
@@ -112,7 +112,7 @@
 .elf-hat .elf-hat__side__left::after {
   position: absolute;
   z-index: 2;
-  content: "";
+  content: '';
   display: block;
   width: 3rem;
   height: 6rem;
@@ -131,7 +131,7 @@
 
 .elf-hat .elf-hat__side__right::before {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   width: 8rem;
   height: 8rem;
@@ -142,7 +142,7 @@
 .elf-hat .elf-hat__side__right::after {
   position: absolute;
   z-index: 2;
-  content: "";
+  content: '';
   display: block;
   width: 3rem;
   height: 6rem;
@@ -162,7 +162,7 @@
 
 .elf-hat .elf-hat__side__spikes::before,
 .elf-hat .elf-hat__side__spikes::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 1.5rem;
