--- a/src/app/feature/calendar/cards/gift-box/gift-box.component.css
+++ b/src/app/feature/calendar/cards/gift-box/gift-box.component.css
@@ -3,13 +3,7 @@
  * https://codepen.io/johnnyfekete/pen/NWRxmwG
  */
 .gift-box-day {
-  background: linear-gradient(
-    200deg,
-    #1d3557 33%,
-    #457b9d 33%,
-    #457b9d 66%,
-    #a8dadc 66%
-  );
+  background: linear-gradient(200deg, #1d3557 33%, #457b9d 33%, #457b9d 66%, #a8dadc 66%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,8 +111,7 @@
   transform: rotateY(0deg) translateZ(110px) translateX(-10px) translateY(-10px);
 }
 .gift-box .gift-box-lid__side--back {
-  transform: rotateY(180deg) translateZ(110px) translateX(10px)
-    translateY(-10px);
+  transform: rotateY(180deg) translateZ(110px) translateX(10px) translateY(-10px);
 }
 .gift-box .gift-box-lid__side--left {
   transform: rotateY(-90deg) translateZ(120px) translateY(-10px);
@@ -140,8 +133,8 @@
   transform-origin: 50% 50%;
   transform: rotateX(75deg) rotateY(90deg)
     /* use a CSS variable for the translate, defined in CSS */
-    translateZ(calc(80px - var(--gift-box-position))) translateX(-85px)
-    translateY(-75px) skewY(30deg);
+    translateZ(calc(80px - var(--gift-box-position))) translateX(-85px) translateY(-75px)
+    skewY(30deg);
 }
 
 .gift-box .ribbon-r {
@@ -154,8 +147,8 @@
   transform-origin: 50% 50%;
   transform: rotateX(-5deg) rotateY(90deg)
     /* use a CSS variable for the translate, defined in CSS */
-    translateZ(calc(80px - var(--gift-box-position))) translateX(-30px)
-    translateY(-110px) skewY(30deg);
+    translateZ(calc(80px - var(--gift-box-position))) translateX(-30px) translateY(-110px)
+    skewY(30deg);
 }
 
 .ribbon-l-end {
@@ -167,8 +160,7 @@
   border: 2px solid var(--gift-box-edge-color);
   border-top: none;
   border-bottom: none;
-  transform: rotateX(-70deg) translateX(80px) translateY(-80px)
-    translateZ(-60px);
+  transform: rotateX(-70deg) translateX(80px) translateY(-80px) translateZ(-60px);
 }
 
 .ribbon-r-end {
