--- a/src/app/feature/calendar/cards/jingle-bells/jingle-bells.component.css
+++ b/src/app/feature/calendar/cards/jingle-bells/jingle-bells.component.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 80%;
   height: 10rem;
-  font-family: "FreeSerif Medium";
+  font-family: 'FreeSerif Medium';
   transform: scale(0.15) translateX(-40rem);
 }
 
@@ -77,7 +77,7 @@
 }
 
 .jingle-bells .bar.bar--end::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -111,7 +111,7 @@
 }
 
 .jingle-bells .note.note--c::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   margin-top: -6.5rem;
