--- a/src/app/feature/calendar/cards/polar-bear/polar-bear.component.css
+++ b/src/app/feature/calendar/cards/polar-bear/polar-bear.component.css
@@ -72,7 +72,7 @@
 }
 
 .polar-bear .polar-bear__fingers::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   left: -0.9rem;
@@ -85,7 +85,7 @@
 }
 
 .polar-bear .polar-bear__fingers::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   left: 1rem;
@@ -158,7 +158,7 @@
 }
 
 .polar-bear .polar-bear__ear::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 1;
@@ -189,7 +189,7 @@
 }
 .polar-bear .polar-bear__eye::after {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   bottom: -0.5rem;
   left: -0.5rem;
@@ -228,7 +228,7 @@
 }
 .polar-bear .polar-bear__lip::after {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   top: -0.5rem;
   left: -0.5rem;
@@ -268,7 +268,7 @@
 
 .polar-bear .polar-bear__nose::after {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   top: 0.5rem;
   left: 0.65rem;
@@ -287,7 +287,7 @@
 }
 
 .polar-bear__scarf::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   width: 9.8rem;
@@ -310,7 +310,7 @@
 }
 
 .polar-bear .polar-bear__scarf-line::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   width: 14rem;
