--- a/src/app/feature/calendar/cards/skate/skate.component.css
+++ b/src/app/feature/calendar/cards/skate/skate.component.css
@@ -42,7 +42,7 @@
 }
 
 .skate .skate-blade::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: -1.5rem;
@@ -59,7 +59,7 @@
 }
 
 .skate .skate-blade::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: -2.25rem;
@@ -71,7 +71,7 @@
 }
 
 .skate .skate-blade-holder-left {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: -1;
@@ -89,7 +89,7 @@
 }
 
 .skate .skate-blade-holder-left::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: -1;
@@ -101,7 +101,7 @@
 }
 
 .skate .skate-blade-holder-right {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: -1;
@@ -119,7 +119,7 @@
 }
 
 .skate .skate-blade-holder-right::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: -1;
@@ -141,7 +141,7 @@
 }
 
 .skate .skate-boot-bottom::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   left: 2rem;
@@ -172,7 +172,7 @@
 }
 
 .skate .skate-boot-main::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 3;
@@ -180,11 +180,7 @@
   left: 2.5rem;
   width: 5rem;
   height: 5rem;
-  background: radial-gradient(
-    circle at 5rem 0,
-    transparent 5rem,
-    var(--skate) 5rem
-  );
+  background: radial-gradient(circle at 5rem 0, transparent 5rem, var(--skate) 5rem);
 }
 
 .skate .skate-boot-main-bottom {
@@ -198,7 +194,7 @@
 }
 
 .skate .skate-boot-main-bottom::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 1rem;
@@ -209,7 +205,7 @@
 }
 
 .skate .skate-boot-main-bottom::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 3;
@@ -217,11 +213,7 @@
   height: 1rem;
   width: 1rem;
   background-color: var(--skate);
-  background: radial-gradient(
-    circle at 0 0,
-    transparent 1rem,
-    var(--skate) 1rem
-  );
+  background: radial-gradient(circle at 0 0, transparent 1rem, var(--skate) 1rem);
 }
 
 .skate .skate-boot-front {
@@ -231,17 +223,13 @@
   left: 3rem;
   height: 7rem;
   width: 9rem;
-  background: radial-gradient(
-    circle at 9rem 0,
-    transparent 5rem,
-    var(--skate-dark) 5rem
-  );
+  background: radial-gradient(circle at 9rem 0, transparent 5rem, var(--skate-dark) 5rem);
   transform-origin: right center;
   transform: scaleX(0.8);
 }
 
 .skate .skate-boot-front::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: -3.5rem;
@@ -262,7 +250,7 @@
 }
 
 .skate .skate-tie::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0.45rem;
