--- a/src/app/feature/calendar/cards/stocking/stocking.component.css
+++ b/src/app/feature/calendar/cards/stocking/stocking.component.css
@@ -14,11 +14,7 @@
   height: 100%;
   align-items: center;
   justify-content: center;
-  background: radial-gradient(
-    circle at center,
-    var(--stocking-background) 0,
-    rgb(25, 50, 60) 200%
-  );
+  background: radial-gradient(circle at center, var(--stocking-background) 0, rgb(25, 50, 60) 200%);
 }
 
 .stocking {
@@ -51,17 +47,14 @@
 }
 
 .stocking .stocking-wool::after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: 7.4rem;
   height: 5rem;
   top: -0.5rem;
   left: -0.5rem;
-  background-image: radial-gradient(
-    var(--stocking-wool) 50%,
-    rgba(255, 255, 255, 0) 70%
-  );
+  background-image: radial-gradient(var(--stocking-wool) 50%, rgba(255, 255, 255, 0) 70%);
   background-position: 0 0;
   background-size: 0.925rem 1rem;
 }
