--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -37,7 +37,9 @@
             <ng-template [xmasCalendarCardFactory] [type]="card.day"></ng-template>
           }
         </div>
-      } @placeholder {<span></span>}
+      } @placeholder {
+        <span></span>
+      }
 
       @if (card.content?.author) {
         <div class="title-container">
