feat: do not render inner content for disabled cards (#37)
* feat: do not render inner content for disabled cards

* fix: format

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -31,9 +31,15 @@
         </div>
       }
 
-      <div class="inside">
-        <ng-template [xmasCalendarCardFactory] [type]="card.day"></ng-template>
-      </div>
+      @defer (on viewport) {
+        <div class="inside">
+          @if (card.revealed || card.canReveal) {
+            <ng-template [xmasCalendarCardFactory] [type]="card.day"></ng-template>
+          }
+        </div>
+      } @placeholder {
+        <span></span>
+      }
 
       @if (card.content?.author) {
         <div class="title-container">
