--- a/src/app/feature/calendar/calendar-grid.component.css
+++ b/src/app/feature/calendar/calendar-grid.component.css
@@ -2,7 +2,8 @@
   display: grid;
   width: 100%;
   max-width: 1100px;
-  margin: 3% auto 3.5rem auto;
+  margin: 0 auto 3.5rem auto;
+  padding-top: 1.5rem;
 
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
