--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -44,19 +44,21 @@
 
       @if (card.contents) {
         <div class="title-container">
-          @for (content of card.contents; track $index) {
-            @if (!content.author.twitterHandle) {
-              <p>{{ content.author.name }}</p>
-            } @else {
-              <a
-                [href]="content.author.twitterHandle! | twitterUrl"
-                target="_blank"
-                title="Link to author's twitter account"
-              >
-                {{ content.author.name }}
-              </a>
+          <div class="title-container-content">
+            @for (content of card.contents; track $index) {
+              @if (!content.author.twitterHandle) {
+                <p>{{ content.author.name }}</p>
+              } @else {
+                <a
+                  [href]="content.author.twitterHandle! | twitterUrl"
+                  target="_blank"
+                  title="Link to author's twitter account"
+                >
+                  {{ content.author.name }}
+                </a>
+              }
             }
-          }
+          </div>
         </div>
       }
     </label>
